fix: resolve CORS preflight 404 & missing /api path - normalize frontend baseURL, bypass RateLimitFilter for OPTIONS, allow all Vercel/RippleNexus origins and headers in SecurityConfig